# ai-todo-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
models/: README.md
scripts/: run_dev.py  setup_env.sh
src/ai_todo/: __init__.py  main.py
src/ai_todo/api/: routes.py
src/ai_todo/cli/: cli.py
src/ai_todo/db/: storage.py
src/ai_todo/models/: predictor.py  trainer.py
src/ai_todo/schemas/: task.py
src/ai_todo/services/: nlp.py  prioritization.py  reminders.py  speech.py
tests/integration/: test_api.py
tests/unit/: test_prioritization.py  test_reminders.py
